# perpfully_hedged

./: .gitignore  Cargo.toml  readme.md  settings.txt
ftx_api/: Cargo.toml
ftx_api/src/: account.rs  futures.rs  helpers.rs  lib.rs  markets.rs  method_senders.rs  orders.rs  wallet.rs
ftx_api/src/api_payload_structs/: mod.rs  orders.rs  user_data.rs
ftx_api/src/api_response_structs/: account.rs  futures.rs  http.rs  markets.rs  mod.rs  wallet.rs
src/: account_information.rs  execute_data.rs  heuristics.rs  main.rs  market_data_manipulators.rs  trade_execution.rs  trade_execution_helpers.rs
